Adding Google Tag Manager

--- a/class-bjj.html
+++ b/class-bjj.html
@@ -12,6 +12,14 @@
   gtag('config', 'G-G8PTM5VMZW');
 </script>
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-K6FXLSWW');</script>
+  <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -21,6 +29,10 @@
     <title>Brazilian Jiu-Jitsu | Golden Tiger Academy</title>
   </head>
   <body id="class-bjj-body">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
         <span class="logo"><a href="/">Golden Tiger Academy</a></span>
