--- a/thank-you.html
+++ b/thank-you.html
@@ -12,6 +12,14 @@
   gtag('config', 'G-G8PTM5VMZW');
 </script>
 
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-K6FXLSWW');</script>
+  <!-- End Google Tag Manager -->
+
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
@@ -20,7 +28,12 @@
     <meta name="description" content="Thank you for contacting Golden Tiger Academy in Dunboyne! Your message has been received, and our team will get back to you as soon as possible. Stay connected with us on social media for more updates and information." />
     <title>Thank You | Golden Tiger Academy</title>
   </head>
+
   <body id="contact-us-body">
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
         <span class="logo"><a href="/">Golden Tiger Academy</a></span>
