--- a/class-bjj.html
+++ b/class-bjj.html
@@ -35,7 +35,7 @@
   <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
-        <span class="logo"><a href="/">Golden Tiger Academy</a></span>
+        <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
         <nav>
           <button class="mobile-menu-button" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle Menu">
             <svg fill="var(--theme-color-3)" class="hamburger" viewBox="0 0 100 100" width="25">
@@ -162,7 +162,7 @@
     <p>Please remove any jewelry and trim your fingernails and toenails. This reduces the risk of injury and accidental scratches.</p>
    </div>
       </div>
-      </div>
+
     </section>
 
 
