--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
-        <span class="logo"><a href="/">Golden Tiger Academy</a></span>
+        <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
         <nav>
           <button class="mobile-menu-button" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle Menu">
             <svg fill="var(--theme-color-3)" class="hamburger" viewBox="0 0 100 100" width="25">
@@ -488,38 +488,38 @@
             <p class="faq-answer" id="answer2" aria-hidden="true"><span>No, martial arts is for people of all fitness levels. Our classes are designed to accommodate beginners and gradually build strength, flexibility, and endurance over time.</span></p>
           </li>
           <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer2">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
               <span class="question-title">What age groups do you cater to in your martial arts classes?</span>
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer2" aria-hidden="true"><span>We offer classes for a wide range of age groups, including children (starting from age 5), teenagers, and adults. Our instructors tailor the curriculum to suit the specific needs and skill levels of each age group.</span></p>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>We offer classes for a wide range of age groups, including children (starting from age 5), teenagers, and adults. Our instructors tailor the curriculum to suit the specific needs and skill levels of each age group.</span></p>
           </li>
 
           <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
               <span class="question-title">What should I wear and bring to my first martial arts class?</span>
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer3" aria-hidden="true"><span>For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!</span></p>
+            <p class="faq-answer" id="answer4" aria-hidden="true"><span>For your first class, just wear comfortable gym clothes. Avoid anything with zippers or metal, and take off any jewellery if you can. Make sure your fingernails and toenails are trimmed too. And don't forget to bring a water bottle to stay hydrated!</span></p>
           </li>
 
           <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
               <span class="question-title">Do you offer private lessons?</span>
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer4" aria-hidden="true"><span>Yes, we offer private lessons for individuals or small groups who prefer personalized instruction or have specific training objectives.</span></p>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we offer private lessons for individuals or small groups who prefer personalized instruction or have specific training objectives.</span></p>
           </li>
           <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer4">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
               <span class="question-title">Are your instructors certified and experienced?</span>
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer4" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
+            <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
           </li>
         </ul>
       </div>
