--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with Brazilian Jiu-Jitsu, Karate, Muay Thai, Kung Fu, and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
             <div class="cta-wrap">
-              <a href="./contact-us.html" class="cta cta-1-contact-us" target="_blank"> <i class="fa fa-envelope"></i> Contact Us</a>
+              <a href="./contact-us.html" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
             </div>
             <div class="cta-wrap">
-              <a href="tel:0872333481" class="cta cta-2-call-us" target="_blank"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
+              <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
             </div>
           </div>
         </div>
