--- a/contact-us.html
+++ b/contact-us.html
@@ -95,7 +95,7 @@
 <!-- Subject Header  -->
 <input type="hidden" name="from_name" value="Golden Tiger Academy">
 <input type="hidden" name="subject" value="Golden Tiger Academy - Form Received">
-<input type="hidden" name="redirect" value="http://127.0.0.1:5500/thank-you.html">
+<input type="hidden" name="redirect" value="https://user9511.github.io/golden-tiger-academy-main/thank-you.html">
 
 <input id="btn-submit" type="submit" value="Submit">
 </form>
