--- a/thank-you.html
+++ b/thank-you.html
@@ -36,7 +36,7 @@
   <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
-        <span class="logo"><a href="/">Golden Tiger Academy</a></span>
+        <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
         <nav>
           <button class="mobile-menu-button" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle Menu">
             <svg fill="var(--theme-color-3)" class="hamburger" viewBox="0 0 100 100" width="25">
