--- a/thank-you.html
+++ b/thank-you.html
@@ -63,7 +63,7 @@
 <section class="contact-us-container-outer">
   <div class="contact-us-container-inner">
 
-<div id="form" class="form thank-you">
+<div id="form-thank-you" class="form thank-you">
   <div class="thank-you-header">
     <i class="fa fa-check"></i>
     <h1>Thank You <span id="user-name"></span>!</h1>
