--- a/index.html
+++ b/index.html
@@ -133,28 +133,28 @@
           <div class="card-content">
             <h3 class="card-header">Brazilian Jiu-Jitsu</h3>
             <p class="card-subheader">BJJ focuses on ground grappling and submissions. Develop self-defense skills, fitness, and mental resilience through technical groundwork. Suitable for all skill levels.</p>
-            <a href="./class-bjj.html" class="card-btn bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
+            <a href="./class-bjj.html" class="card-btn class-bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
           </div>
         </div>
         <div class="card card2">
           <div class="card-content">
             <h3 class="card-header">Karate</h3>
             <p class="card-subheader">Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
-            <a href="./class-karate.html" class="card-btn karate">Learn More <span class="sr-only">about Karate</span></a>
+            <a href="./class-karate.html" class="card-btn class-karate">Learn More <span class="sr-only">about Karate</span></a>
           </div>
         </div>
         <div class="card card3">
           <div class="card-content">
             <h3 class="card-header">Muay Thai</h3>
             <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision.</p>
-            <a href="./class-muay-thai.html" class="card-btn muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
+            <a href="./class-muay-thai.html" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
           </div>
         </div>
         <div class="card card4">
           <div class="card-content">
             <h3 class="card-header">Kickboxing</h3>
             <p class="card-subheader">Kickboxing combines punches and kicks for a dynamic striking art. Cardiovascular fitness, agility, and strong kicks characterize this sport, promoting overall physical conditioning.</p>
-            <a href="./class-kickboxing.html" class="card-btn kickboxing">Learn More <span class="sr-only">about Kickboxing</span></a>
+            <a href="./class-kickboxing.html" class="card-btn class-kickboxing">Learn More <span class="sr-only">about Kickboxing</span></a>
           </div>
         </div>
 
@@ -162,14 +162,14 @@
           <div class="card-content">
             <h3 class="card-header">Wing Tsun Kung Fu</h3>
             <p class="card-subheader">Wing Tsun Kung Fu is a martial art that emphasizes efficiency and directness in self-defense. Developed by Grandmaster Leung Ting, it focuses on practical techniques and scientific principles.</p>
-            <a href="./class-kung-fu.html" class="card-btn kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
+            <a href="./class-kung-fu.html" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
           </div>
         </div>
         <div class="card card6">
           <div class="card-content">
             <h3 class="card-header">Wonhwado</h3>
             <p class="card-subheader">Wonhwado, a Korean martial art, integrates traditional techniques with modern self-defense. Emphasizes dynamic strikes, joint locks, and circular movements for a balanced martial practice.</p>
-            <a href="./class-wonhwado.html" class="card-btn wonhwado">Learn More <span class="sr-only">about Wonhwado</span></a>
+            <a href="./class-wonhwado.html" class="card-btn class-wonhwado">Learn More <span class="sr-only">about Wonhwado</span></a>
           </div>
         </div>
       </div>
