--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     <footer>
       <div class="footer-inner-container">
         <div class="address">
-          <span class="logo"><a href="/">Golden Tiger Academy</a></span>
+          <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
           <div class="address-text">
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
