--- a/class-bjj.html
+++ b/class-bjj.html
@@ -185,7 +185,7 @@
         <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class </p>
         <div class="cta-container">
           <div class="cta-wrap">
-            <a href="/contact-us.html" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
+            <a href="./contact-us.html" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
           </div>
           <div class="cta-wrap">
             <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
