Google Tag Manager - added classes
 Adding Class "nav-link" to  each link in the primary navigation

--- a/class-bjj.html
+++ b/class-bjj.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-K6FXLSWW');</script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-K6FXLSWW");
+    </script>
+    <!-- End Google Tag Manager -->
 
-  <!-- Hotjar Tracking Code for https://user9511.github.io/golden-tiger-academy-main/index.html -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3867105,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <!-- Hotjar Tracking Code for https://user9511.github.io/golden-tiger-academy-main/index.html -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3867105, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
@@ -31,9 +43,8 @@
   </head>
   <body id="class-bjj-body">
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
         <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
@@ -48,12 +59,12 @@
 
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./index.html#about-us">About us</a></li>
-              <li><a href="./index.html#our-classes">Our Classes</a></li>
-              <li><a href=./index.html#timetable>Timetable</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="./contact-us.html">Contact Us</a></li>
+              <li><a href="./index.html" class="nav-link">Home</a></li>
+              <li><a href="#about-us" class="nav-link">About us</a></li>
+              <li><a href="#our-classes" class="nav-link">Our Classes</a></li>
+              <li><a href="#timetable" class="nav-link">Timetable</a></li>
+              <li><a href="#" class="nav-link">Gallery</a></li>
+              <li><a href="./contact-us.html" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
         </nav>
@@ -134,44 +145,41 @@
       </div>
     </section>
 
-
     <!-- Section - Your First Class -->
     <section class="first-class-container-outer">
       <h4 class="first-class">For Your First Class</h4>
 
       <div class="first-class-container-inner">
-   <div class="tip">
-    <div class="tip-image">
-      <img src="./images/icon-tshirt.png" class="icon" alt="">
-    </div>
+        <div class="tip">
+          <div class="tip-image">
+            <img src="./images/icon-tshirt.png" class="icon" alt="" />
+          </div>
 
-    <h4>Dress Comforably</h4>
-    <p>Wear regular comfortable gym clothes without any zippers or metal accessories. </p>
-   </div>
-   <div class="tip">
-    <div class="tip-image">
-    <img src="./images/icon-water-bottle.png" class="icon" alt="">
-  </div>
-    <h4>Stay Hydrated</h4>
-    <p>Bring along a water bottle to keep yourself hydrated during training. </p>
-   </div>
-   <div class="tip">
-    <div class="tip-image">
-    <img src="./images/icon-scissors.png" class="icon" alt="">
-  </div>
-    <h4>Safety First</h4>
-    <p>Please remove any jewelry and trim your fingernails and toenails. This reduces the risk of injury and accidental scratches.</p>
-   </div>
+          <h4>Dress Comforably</h4>
+          <p>Wear regular comfortable gym clothes without any zippers or metal accessories.</p>
+        </div>
+        <div class="tip">
+          <div class="tip-image">
+            <img src="./images/icon-water-bottle.png" class="icon" alt="" />
+          </div>
+          <h4>Stay Hydrated</h4>
+          <p>Bring along a water bottle to keep yourself hydrated during training.</p>
+        </div>
+        <div class="tip">
+          <div class="tip-image">
+            <img src="./images/icon-scissors.png" class="icon" alt="" />
+          </div>
+          <h4>Safety First</h4>
+          <p>Please remove any jewelry and trim your fingernails and toenails. This reduces the risk of injury and accidental scratches.</p>
+        </div>
       </div>
-
     </section>
 
-
-     <!-- Section - Ready To Join -->
-     <section class="ready-to-join-container-outer">
+    <!-- Section - Ready To Join -->
+    <section class="ready-to-join-container-outer">
       <div class="ready-to-join-container-inner">
         <h3>Ready to Begin?</h3>
-        <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class </p>
+        <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class</p>
         <div class="cta-container">
           <div class="cta-wrap">
             <a href="./contact-us.html" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
@@ -181,8 +189,7 @@
           </div>
         </div>
       </div>
-      </section>
-
+    </section>
 
     <!-- Footer -->
     <footer>
