--- a/thank-you.html
+++ b/thank-you.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-K6FXLSWW');</script>
-  <!-- End Google Tag Manager -->
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-K6FXLSWW");
+    </script>
+    <!-- End Google Tag Manager -->
 
-  <!-- Hotjar Tracking Code for https://user9511.github.io/golden-tiger-academy-main/index.html -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:3867105,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-      a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    <!-- Hotjar Tracking Code for https://user9511.github.io/golden-tiger-academy-main/index.html -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 3867105, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
 
     <meta charset="UTF-8" />
     <script src="https://kit.fontawesome.com/f9aefcac71.js" crossorigin="anonymous"></script>
@@ -32,9 +44,8 @@
 
   <body id="contact-us-body">
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K6FXLSWW" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
         <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
@@ -49,89 +60,82 @@
 
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
-              <li><a href="./index.html">Home</a></li>
-              <li><a href="./index.html#about-us">About us</a></li>
-              <li><a href="./index.html#our-classes">Our Classes</a></li>
-              <li><a href=./index.html#timetable>Timetable</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="./contact-us.html">Contact Us</a></li>
+              <li><a href="./index.html" class="nav-link">Home</a></li>
+              <li><a href="#about-us" class="nav-link">About us</a></li>
+              <li><a href="#our-classes" class="nav-link">Our Classes</a></li>
+              <li><a href="#timetable" class="nav-link">Timetable</a></li>
+              <li><a href="#" class="nav-link">Gallery</a></li>
+              <li><a href="./contact-us.html" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
         </nav>
       </div>
     </header>
 
-<section class="contact-us-container-outer">
-  <div class="contact-us-container-inner">
+    <section class="contact-us-container-outer">
+      <div class="contact-us-container-inner">
+        <div id="form-thank-you" class="form thank-you">
+          <div class="thank-you-header">
+            <i class="fa fa-check"></i>
+            <h1>Thank You <span id="user-name"></span>!</h1>
+          </div>
 
-<div id="form-thank-you" class="form thank-you">
-  <div class="thank-you-header">
-    <i class="fa fa-check"></i>
-    <h1>Thank You <span id="user-name"></span>!</h1>
-  </div>
+          <p>Your message has been sent. We'll reach out to you as soon as we can. In the meantime feel free to check us out on social media.</p>
 
-  <p>Your message has been sent. We'll reach out to you as soon as we can. In the meantime feel free to check us out on social media.</p>
+          <div class="social-media-container thank-you">
+            <div class="social-media-icons">
+              <a href="https://www.facebook.com/goldentigeracademy/" target="_blank">
+                <i class="fa fa-facebook-f"></i>
+                <span class="sr-only">Facebook</span>
+              </a>
+              <a href="https://www.instagram.com/kengoldentiger/" target="_blank">
+                <i class="fa fa-instagram"></i>
+                <span class="sr-only">Instagram</span>
+              </a>
+            </div>
+          </div>
+        </div>
 
-  <div class="social-media-container thank-you">
-    <div class="social-media-icons">
-      <a href="https://www.facebook.com/goldentigeracademy/" target="_blank">
-        <i class="fa fa-facebook-f"></i>
-        <span class="sr-only">Facebook</span>
-      </a>
-      <a href="https://www.instagram.com/kengoldentiger/" target="_blank">
-        <i class="fa fa-instagram"></i>
-        <span class="sr-only">Instagram</span>
-      </a>
-
-
-    </div>
-  </div>
-</div>
-
-<!-- Google Map iFrame -->
-<iframe title="Golden Tiger Academy Location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2377.354900366316!2d-6.476084822976377!3d53.426362372312624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48676db1a4017c75%3A0xd34d63101fce91c3!2sGolden%20Tiger%20Academy!5e0!3m2!1sen!2sie!4v1707230962025!5m2!1sen!2sie" width="750" height="100" style="border:0;" allowfullscreen=""  loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
-</section>
-
-
-
-
-
-<!-- Footer -->
-<footer>
-  <div class="footer-inner-container">
-    <div class="address">
-      <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
-      <div class="address-text">
-        Address: Unit 10, Dunboyne Business Park, <br />
-        Dunboyne, Co. Meath, A86 WR26
+        <!-- Google Map iFrame -->
+        <iframe title="Golden Tiger Academy Location" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2377.354900366316!2d-6.476084822976377!3d53.426362372312624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48676db1a4017c75%3A0xd34d63101fce91c3!2sGolden%20Tiger%20Academy!5e0!3m2!1sen!2sie!4v1707230962025!5m2!1sen!2sie" width="750" height="100" style="border: 0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
-    </div>
+    </section>
 
-    <div class="social-media-container">
-      <div class="social-media-icons">
-        <a href="https://www.facebook.com/goldentigeracademy/" target="_blank">
-          <i class="fa fa-facebook-f"></i>
-          <span class="sr-only">Facebook</span>
-        </a>
-        <a href="https://www.instagram.com/kengoldentiger/" target="_blank">
-          <i class="fa fa-instagram"></i>
-          <span class="sr-only">Instagram</span>
-        </a>
+    <!-- Footer -->
+    <footer>
+      <div class="footer-inner-container">
+        <div class="address">
+          <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
+          <div class="address-text">
+            Address: Unit 10, Dunboyne Business Park, <br />
+            Dunboyne, Co. Meath, A86 WR26
+          </div>
+        </div>
 
-        <a href="./contact-us.html">
-          <i class="fa fa-envelope"></i>
-          <span class="sr-only">Email Us Now</span>
-        </a>
-        <a href="tel:0872333481">
-          <i class="fa fa-solid fa-phone fa-flip-horizontal"></i>
-          <span class="sr-only">Call Us Now</span>
-        </a>
+        <div class="social-media-container">
+          <div class="social-media-icons">
+            <a href="https://www.facebook.com/goldentigeracademy/" target="_blank">
+              <i class="fa fa-facebook-f"></i>
+              <span class="sr-only">Facebook</span>
+            </a>
+            <a href="https://www.instagram.com/kengoldentiger/" target="_blank">
+              <i class="fa fa-instagram"></i>
+              <span class="sr-only">Instagram</span>
+            </a>
+
+            <a href="./contact-us.html">
+              <i class="fa fa-envelope"></i>
+              <span class="sr-only">Email Us Now</span>
+            </a>
+            <a href="tel:0872333481">
+              <i class="fa fa-solid fa-phone fa-flip-horizontal"></i>
+              <span class="sr-only">Call Us Now</span>
+            </a>
+          </div>
+          <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
+        </div>
       </div>
-      <a href="https://www.linkedin.com/in/shanemcgeown/" class="designed-by">Designed by: shanemcgeown</a>
-    </div>
-  </div>
-</footer>
-<script src="./thank-you.js"></script>
+    </footer>
+    <script src="./thank-you.js"></script>
   </body>
 </html>
