--- a/class-wonhwado.html
+++ b/class-wonhwado.html
@@ -60,9 +60,9 @@
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
               <li><a href="./index.html" class="nav-link">Home</a></li>
-              <li><a href="#about-us" class="nav-link">About us</a></li>
-              <li><a href="#our-classes" class="nav-link">Our Classes</a></li>
-              <li><a href="#timetable" class="nav-link">Timetable</a></li>
+              <li><a href="./index.html#about-us" class="nav-link">About us</a></li>
+              <li><a href="./index.html#our-classes" class="nav-link">Our Classes</a></li>
+              <li><a href="./index.html#timetable" class="nav-link">Timetable</a></li>
               <li><a href="#" class="nav-link">Gallery</a></li>
               <li><a href="./contact-us.html" class="nav-link">Contact Us</a></li>
             </ul>
