Updating BJJ class description
Added content about the instructor and updated the kids/teens description.

--- a/class-bjj.html
+++ b/class-bjj.html
@@ -90,6 +90,10 @@
 
         <div class="class-text">
           <div class="class-format">
+            <h2>Instructor</h2>
+            <p>Ken Byrne has over 12 years of experience in Brazilian Jiu-Jitsu. He was awarded his black belt in 2023 by Gary Savage, 3rd degree black belt.</p>
+          </div>
+          <div class="class-format">
             <h2>Fundamentals Class</h2>
             <p>Start your BJJ journey with our fundamentals class every Monday. Perfect for newcomers, this session covers all the fundamental moves and principles of Brazilian Jiu-Jitsu. No prior martial arts experience is required, and there's no sparring involved. Plus, it's a no-gi class, so there's no need for a BJJ GI (uniform).</p>
           </div>
@@ -103,7 +107,7 @@
           </div>
           <div class="class-format">
             <h2>Kids / Teens Classes</h2>
-            <p>Our classes for kids and teens ensure a safe and enjoyable space for them to learn Brazilian Jiu-Jitsu, promoting the cultivation of confidence, discipline, and physical fitness in a fun and engaging manner.</p>
+            <p>Designed for kids (5-12) and teens (13-17), our classes offer a safe, enjoyable space to learn Brazilian Jiu-Jitsu while building confidence. We emphasize confidence, discipline, and fitness through engaging activities, ensuring a positive experience for all participants.</p>
           </div>
         </div>
       </div>
