--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
           <!-- Saturday Row 3 -->
           <td class="class open-mat" data-cell="class">
             Open Mat (16+)
-            <div class="time" data-cell="time">12:30am - 1:30pm</div>
+            <div class="time" data-cell="time">12:30pm - 1:30pm</div>
           </td>
           <!--Sunday Row 3 -->
           <td class="class closed" data-cell="class">Closed</td>
