--- a/thank-you.html
+++ b/thank-you.html
@@ -136,6 +136,6 @@
         </div>
       </div>
     </footer>
-    <script src="./thank-you.js"></script>
+    <script src="./mobile-nav.js"></script>
   </body>
 </html>
