Adding FAQ number 7
Adding an additional FAQ (number 7)

--- a/index.html
+++ b/index.html
@@ -526,6 +526,14 @@
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
           </li>
+          <li class="faq">
+            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
+              <span class="question-title">What's the youngest age kids can start martial arts?</span>
+              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
+              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
+            </button>
+            <p class="faq-answer" id="answer7" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, WonHwaDo, and Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
+          </li>
         </ul>
       </div>
     </section>
