--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
 
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
-              <li><a href="./index.html" class="nav-link">Home</a></li>
+              <li><a href="./" class="nav-link">Home</a></li>
               <li><a href="#about-us" class="nav-link">About us</a></li>
               <li><a href="#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="#timetable" class="nav-link">Timetable</a></li>
               <li><a href="#" class="nav-link">Gallery</a></li>
-              <li><a href="./contact-us.html" class="nav-link">Contact Us</a></li>
+              <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
         </nav>
