--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
               <li><a href="./" class="nav-link">Home</a></li>
-              <li><a href="#about-us" class="nav-link">About us</a></li>
+              <li><a href="./#about-us" class="nav-link">About us</a></li>
               <li><a href="#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="#timetable" class="nav-link">Timetable</a></li>
               <li><a href="#" class="nav-link">Gallery</a></li>
