--- a/thank-you.html
+++ b/thank-you.html
@@ -163,7 +163,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <header>
       <div class="header-content-container-inner">
-        <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
+        <span class="logo"><a href="./">Golden Tiger Academy</a></span>
         <nav>
           <button class="mobile-menu-button" aria-controls="primary-navigation" aria-expanded="false" aria-label="Toggle Menu">
             <svg fill="var(--theme-color-3)" class="hamburger" viewBox="0 0 100 100" width="25">
@@ -175,12 +175,12 @@
 
           <div class="mobile-nav-wrapper">
             <ul id="primary-navigation">
-              <li><a href="./index.html" class="nav-link">Home</a></li>
-              <li><a href="./index.html#about-us" class="nav-link">About us</a></li>
-              <li><a href="./index.html#our-classes" class="nav-link">Our Classes</a></li>
-              <li><a href="./index.html#timetable" class="nav-link">Timetable</a></li>
+              <li><a href="./" class="nav-link">Home</a></li>
+              <li><a href="./#about-us" class="nav-link">About us</a></li>
+              <li><a href="./our-classes" class="nav-link">Our Classes</a></li>
+              <li><a href="./timetable" class="nav-link">Timetable</a></li>
               <li><a href="#" class="nav-link">Gallery</a></li>
-              <li><a href="./contact-us.html" class="nav-link">Contact Us</a></li>
+              <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
         </nav>
