Removing file extension from URL (class section)

--- a/thank-you.html
+++ b/thank-you.html
@@ -220,7 +220,7 @@
     <footer>
       <div class="footer-inner-container">
         <div class="address">
-          <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
+          <span class="logo"><a href="./">Golden Tiger Academy</a></span>
           <div class="address-text">
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
@@ -238,7 +238,7 @@
               <span class="sr-only">Instagram</span>
             </a>
 
-            <a href="./contact-us.html">
+            <a href="./contact-us">
               <i class="fa fa-envelope"></i>
               <span class="sr-only">Email Us Now</span>
             </a>
