--- a/class-kickboxing.html
+++ b/class-kickboxing.html
@@ -285,7 +285,7 @@
         <p>Ready to jump in and join us? Get started by contacting us to set up your free trial class</p>
         <div class="cta-container">
           <div class="cta-wrap">
-            <a href="./contact-us.html" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
+            <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
           </div>
           <div class="cta-wrap">
             <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
@@ -298,7 +298,7 @@
     <footer>
       <div class="footer-inner-container">
         <div class="address">
-          <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
+          <span class="logo"><a href="./">Golden Tiger Academy</a></span>
           <div class="address-text">
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
@@ -316,7 +316,7 @@
               <span class="sr-only">Instagram</span>
             </a>
 
-            <a href="./contact-us.html">
+            <a href="./contact-us">
               <i class="fa fa-envelope"></i>
               <span class="sr-only">Email Us Now</span>
             </a>
