--- a/contact-us.html
+++ b/contact-us.html
@@ -222,7 +222,7 @@
           <!-- Subject Header  -->
           <input type="hidden" name="from_name" value="Golden Tiger Academy" />
           <input type="hidden" name="subject" value="Golden Tiger Academy - Form Received" />
-          <input type="hidden" name="redirect" value="https://user9511.github.io/golden-tiger-academy-main/thank-you.html" />
+          <input type="hidden" name="redirect" value="https://user9511.github.io/golden-tiger-academy-main/thank-you" />
 
           <input id="btn-submit" type="submit" value="Submit" />
         </form>
@@ -236,7 +236,7 @@
     <footer>
       <div class="footer-inner-container">
         <div class="address">
-          <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
+          <span class="logo"><a href="./">Golden Tiger Academy</a></span>
           <div class="address-text">
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
@@ -254,7 +254,7 @@
               <span class="sr-only">Instagram</span>
             </a>
 
-            <a href="./contact-us.html">
+            <a href="./contact-us">
               <i class="fa fa-envelope"></i>
               <span class="sr-only">Email Us Now</span>
             </a>
