--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           <p id="hero-subheader">Martial arts classes for all ages and levels, no experience required. Start your martial arts journey today with Brazilian Jiu-Jitsu, Karate, Muay Thai, Kung Fu, and more in Dunboyne, County Meath. Boost your fitness, learn self-defense, and unleash your potential. Get in touch to arrange a free trial class.</p>
           <div class="cta-container">
             <div class="cta-wrap">
-              <a href="./contact-us.html" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
+              <a href="./contact-us" class="cta cta-1-contact-us"> <i class="fa fa-envelope"></i> Contact Us</a>
             </div>
             <div class="cta-wrap">
               <a href="tel:0872333481" class="cta cta-2-call-us"> <i class="fa fa-solid fa-phone fa-flip-horizontal"></i> Call Us Now</a>
@@ -253,28 +253,28 @@
           <div class="card-content">
             <h3 class="card-header">Brazilian Jiu-Jitsu</h3>
             <p class="card-subheader">BJJ focuses on ground grappling and submissions. Develop self-defense skills, fitness, and mental resilience through technical groundwork. Suitable for all skill levels.</p>
-            <a href="./class-bjj.html" class="card-btn class-bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
+            <a href="./class-bjj" class="card-btn class-bjj">Learn More <span class="sr-only">about Brazilian Jiu-Jitsu</span></a>
           </div>
         </div>
         <div class="card card2">
           <div class="card-content">
             <h3 class="card-header">Karate</h3>
             <p class="card-subheader">Karate blends punches, kicks, and blocks for self-defense. Discipline, respect, and physical conditioning are core aspects, fostering personal development and martial skill.</p>
-            <a href="./class-karate.html" class="card-btn class-karate">Learn More <span class="sr-only">about Karate</span></a>
+            <a href="./class-karate" class="card-btn class-karate">Learn More <span class="sr-only">about Karate</span></a>
           </div>
         </div>
         <div class="card card3">
           <div class="card-content">
             <h3 class="card-header">Muay Thai</h3>
             <p class="card-subheader">Muay Thai, the 'Art of Eight Limbs,' integrates punches, kicks, elbows, and knee strikes. Known for its power and effectiveness, it builds strength and striking precision.</p>
-            <a href="./class-muay-thai.html" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
+            <a href="./class-muay-thai" class="card-btn class-muay-thai">Learn More <span class="sr-only">about Muay Thai</span></a>
           </div>
         </div>
         <div class="card card4">
           <div class="card-content">
             <h3 class="card-header">Kickboxing</h3>
             <p class="card-subheader">Kickboxing combines punches and kicks for a dynamic striking art. Cardiovascular fitness, agility, and strong kicks characterize this sport, promoting overall physical conditioning.</p>
-            <a href="./class-kickboxing.html" class="card-btn class-kickboxing">Learn More <span class="sr-only">about Kickboxing</span></a>
+            <a href="./class-kickboxing" class="card-btn class-kickboxing">Learn More <span class="sr-only">about Kickboxing</span></a>
           </div>
         </div>
 
@@ -282,14 +282,14 @@
           <div class="card-content">
             <h3 class="card-header">Wing Tsun Kung Fu</h3>
             <p class="card-subheader">Wing Tsun Kung Fu is a martial art that emphasizes efficiency and directness in self-defense. Developed by Grandmaster Leung Ting, it focuses on practical techniques and scientific principles.</p>
-            <a href="./class-kung-fu.html" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
+            <a href="./class-kung-fu" class="card-btn class-kung-fu">Learn More <span class="sr-only">about Kung Fu</span></a>
           </div>
         </div>
         <div class="card card6">
           <div class="card-content">
             <h3 class="card-header">Wonhwado</h3>
             <p class="card-subheader">Wonhwado, a Korean martial art, integrates traditional techniques with modern self-defense. Emphasizes dynamic strikes, joint locks, and circular movements for a balanced martial practice.</p>
-            <a href="./class-wonhwado.html" class="card-btn class-wonhwado">Learn More <span class="sr-only">about Wonhwado</span></a>
+            <a href="./class-wonhwado" class="card-btn class-wonhwado">Learn More <span class="sr-only">about Wonhwado</span></a>
           </div>
         </div>
       </div>
@@ -657,7 +657,7 @@
     <footer>
       <div class="footer-inner-container">
         <div class="address">
-          <span class="logo"><a href="./index.html">Golden Tiger Academy</a></span>
+          <span class="logo"><a href="./">Golden Tiger Academy</a></span>
           <div class="address-text">
             Address: Unit 10, Dunboyne Business Park, <br />
             Dunboyne, Co. Meath, A86 WR26
@@ -675,7 +675,7 @@
               <span class="sr-only">Instagram</span>
             </a>
 
-            <a href="./contact-us.html">
+            <a href="./contact-us">
               <i class="fa fa-envelope"></i>
               <span class="sr-only">Email Us Now</span>
             </a>
