Updating the copy of the FAQ's

--- a/contact-us.html
+++ b/contact-us.html
@@ -221,7 +221,7 @@
           </div>
           <!-- Subject Header  -->
           <input type="hidden" name="from_name" value="Golden Tiger Academy" />
-          <input type="hidden" name="subject" value="Golden Tiger Academy - Form Received" />
+          <input type="hidden" name="subject" value="New Inquiry - GTA" />
           <input type="hidden" name="redirect" value="https://user9511.github.io/golden-tiger-academy-main/thank-you" />
 
           <input id="btn-submit" type="submit" value="Submit" />
