--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer1" aria-hidden="true"><span> No prior experience is necessary to join our classes. Whether you're a complete beginner or have some experience in martial arts, our instructors will guide you through the fundamentals and help you progress at your own pace.</span></p>
+            <p class="faq-answer" id="answer1" aria-hidden="true"><span> Whether you're a complete beginner or have some experience in martial arts, our classes are designed to accommodate individuals of all backgrounds. Our instructors will tailor their guidance to meet your specific needs, ensuring that you receive the support necessary to improve. </span></p>
           </li>
 
           <li class="faq">
@@ -609,11 +609,11 @@
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer3">
-              <span class="question-title">What age groups do you cater to in your martial arts classes?</span>
+              <span class="question-title">What's the youngest age kids can start martial arts?</span>
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer3" aria-hidden="true"><span>We offer classes for a wide range of age groups, including children (starting from age 5), teenagers, and adults. Our instructors tailor the curriculum to suit the specific needs and skill levels of each age group.</span></p>
+            <p class="faq-answer" id="answer3" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, WonHwaDo, and Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
           </li>
 
           <li class="faq">
@@ -627,11 +627,11 @@
 
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer5">
-              <span class="question-title">Do you offer private lessons?</span>
+              <span class="question-title">Do you offer private lessons / group lessons?</span>
               <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
-            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we offer private lessons for individuals or small groups who prefer personalized instruction or have specific training objectives.</span></p>
+            <p class="faq-answer" id="answer5" aria-hidden="true"><span>Yes, we provide one-to-one private lessons. Additionally, we offer small group sessions that can be customized for specific groups, such as women's only sessions, ensuring a comfortable and supportive environment for all participants.</span></p>
           </li>
           <li class="faq">
             <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
@@ -640,14 +640,6 @@
               <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
             </button>
             <p class="faq-answer" id="answer6" aria-hidden="true"><span>All our instructors hold first aid training certification and are Garda-vetted. They bring years of valuable experience to ensure safe and effective instruction for students of all levels.</span></p>
-          </li>
-          <li class="faq">
-            <button class="question-wrapper" aria-expanded="false" aria-controls="answer6">
-              <span class="question-title">What's the youngest age kids can start martial arts?</span>
-              <img src="./images/icon-plus.svg" alt="" class="icon-plus" />
-              <img src="./images/icon-minus.svg" alt="" class="hide icon-minus" />
-            </button>
-            <p class="faq-answer" id="answer7" aria-hidden="true"><span>Kids can start martial arts at Golden Tiger Academy from the age of 5. We offer kids classes in Brazilian Jiu-jitsu, Kickboxing, WonHwaDo, and Karate tailored to younger students, providing a fun, safe and supportive environment for learning essential skills like discipline, respect, and self-confidence. We also offer classes for teens ages 13 - 17. </span></p>
           </li>
         </ul>
       </div>
