Created Gallery Page
Created /gallery.html page.
Created an image gallery using CSS grid and Lightbox2 to make images clickable.

--- a/thank-you.html
+++ b/thank-you.html
@@ -179,7 +179,7 @@
               <li><a href="./#about-us" class="nav-link">About us</a></li>
               <li><a href="./#our-classes" class="nav-link">Our Classes</a></li>
               <li><a href="./#timetable" class="nav-link">Timetable</a></li>
-              <li><a href="#" class="nav-link">Gallery</a></li>
+              <li><a href="./gallery" class="nav-link">Gallery</a></li>
               <li><a href="./contact-us" class="nav-link">Contact Us</a></li>
             </ul>
           </div>
