Added Hover effect to gallery images
Also changed the border-color of the gallery images

--- a/gallery.html
+++ b/gallery.html
@@ -187,33 +187,31 @@
       </div>
     </header>
 
-    <section class="gallery-container-outer">
-      <div class="gallery-container-inner">
-        <a href="https://source.unsplash.com/random/?animal" data-lightbox="pictures" data-title="Caption1">
-          <img src="https://source.unsplash.com/random/?animal" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?fire" data-lightbox="pictures" data-title="Caption2">
-          <img src="https://source.unsplash.com/random/?fire" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?water" data-lightbox="pictures" data-title="Caption3">
-          <img src="https://source.unsplash.com/random/?water" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?fight" data-lightbox="pictures" data-title="Caption4">
-          <img src="https://source.unsplash.com/random/?fight" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?tree" data-lightbox="pictures" data-title="Caption5">
-          <img src="https://source.unsplash.com/random/?tree" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?meat" data-lightbox="pictures" data-title="Caption6">
-          <img src="https://source.unsplash.com/random/?meat" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?drone" data-lightbox="pictures" data-title="Caption7">
-          <img src="https://source.unsplash.com/random/?drone" alt="" />
-        </a>
-        <a href="https://source.unsplash.com/random/?festival" data-lightbox="pictures" data-title="Caption8">
-          <img src="https://source.unsplash.com/random/?festival" alt="" />
-        </a>
-      </div>
+    <section class="gallery-container-inner">
+      <a href="https://source.unsplash.com/random/?animal" data-lightbox="pictures" data-title="Caption1">
+        <img src="https://source.unsplash.com/random/?animal" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?fire" data-lightbox="pictures" data-title="Caption2">
+        <img src="https://source.unsplash.com/random/?fire" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?water" data-lightbox="pictures" data-title="Caption3">
+        <img src="https://source.unsplash.com/random/?water" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?fight" data-lightbox="pictures" data-title="Caption4">
+        <img src="https://source.unsplash.com/random/?fight" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?tree" data-lightbox="pictures" data-title="Caption5">
+        <img src="https://source.unsplash.com/random/?tree" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?meat" data-lightbox="pictures" data-title="Caption6">
+        <img src="https://source.unsplash.com/random/?meat" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?drone" data-lightbox="pictures" data-title="Caption7">
+        <img src="https://source.unsplash.com/random/?drone" alt="" />
+      </a>
+      <a href="https://source.unsplash.com/random/?festival" data-lightbox="pictures" data-title="Caption8">
+        <img src="https://source.unsplash.com/random/?festival" alt="" />
+      </a>
     </section>
 
     <!-- Footer -->
