--- a/class-muay-thai.html
+++ b/class-muay-thai.html
@@ -257,7 +257,7 @@
       <h4 class="first-class">For Your First Class</h4>
 
       <div class="first-class-container-inner">
-        <div class="tip">
+        <div class="tip hidden">
           <div class="tip-image">
             <img src="./images/icon-tshirt.png" class="icon" alt="" />
           </div>
@@ -265,19 +265,19 @@
           <h4>Dress Comforably</h4>
           <p>Wear regular comfortable gym clothes without any zippers or metal accessories.</p>
         </div>
-        <div class="tip">
+        <div class="tip hidden">
           <div class="tip-image">
             <img src="./images/icon-water-bottle.png" class="icon" alt="" />
           </div>
           <h4>Stay Hydrated</h4>
           <p>Bring along a water bottle to keep yourself hydrated during training.</p>
         </div>
-        <div class="tip">
+        <div class="tip hidden">
           <div class="tip-image">
             <img src="./images/icon-scissors.png" class="icon" alt="" />
           </div>
           <h4>Safety First</h4>
-          <p>Please remove any jewelry and trim your fingernails and toenails. This reduces the risk of injury and accidental scratches.</p>
+          <p>Remove jewelry and trim your fingernails and toenails. This reduces the risk of accidental injury</p>
         </div>
       </div>
     </section>
@@ -335,5 +335,6 @@
     </footer>
 
     <script src="./mobile-nav.js"></script>
+    <script src="./animate.js"></script>
   </body>
 </html>
